Visual bug fix on safari for ipad

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -10,7 +10,7 @@
 
     .post-list-image {
       width: 40%;
-      height: auto;
+      height: 100%;
       margin-right: 1.5em;
     }
 
